--- a/package.json
+++ b/package.json
@@ -11,24 +11,24 @@
     "@intlify/unplugin-vue-i18n": "^0.8.0",
     "@nuxt/content": "^2.2.2",
     "@nuxtjs/tailwindcss": "^6.1.3",
-    "@vueuse/nuxt": "9.5.0",
+    "@vueuse/nuxt": "9.6.0",
     "autoprefixer": "^10.4.13",
-    "daisyui": "^2.41.0",
-    "nuxt": "3.0.0-rc.14",
+    "daisyui": "^2.42.1",
+    "nuxt": "3.0.0",
     "postcss": "^8.4.19",
-    "prettier": "^2.7.1",
+    "prettier": "^2.8.0",
     "typescript": "^4.9.3",
     "vue-i18n": "^9.2.2"
   },
   "dependencies": {
     "@heroicons/vue": "^2.0.13",
-    "@pinia/nuxt": "^0.4.3",
-    "@vueuse/nuxt": "9.5.0",
+    "@pinia/nuxt": "^0.4.6",
+    "@vueuse/nuxt": "9.6.0",
     "connect-redis": "^6.1.3",
     "express-session": "^1.17.3",
     "patch-package": "^6.5.0",
-    "pinia": "^2.0.23",
-    "redis": "^4.5.0",
+    "pinia": "^2.0.27",
+    "redis": "^4.5.1",
     "vee-validate": "^4.7.3",
     "yup": "^0.32.11",
     "yup-phone": "^1.3.2"
